--- a/challenge1/css/style.css
+++ b/challenge1/css/style.css
@@ -3,10 +3,10 @@ body {
     font-size: 16px;
 }
 
-img{
+img {
     max-width: 400px;
 }
 
-p.big {
-    line-height: 150%;
+p {
+    line-height: 1.5;
 }
