--- a/challenge2/css/style.css
+++ b/challenge2/css/style.css
@@ -144,9 +144,14 @@ p{
     margin-bottom: 10px;
 }
 
-.use img {
+.use{
+    margin: 0;
+}
+
+.use img{
+
     height: 150px;
-    
+
 }
 
 @media (max-width: 992px) {
@@ -198,27 +203,52 @@ p{
         text-align: left;
         height: auto;
     }
-
-    .testimonial svg {
-        float: left;
-    }
-
-    
 }
 
-
-
-
-.bottom-footer{
-    width: 100%;
-}
 
 footer {
-    background-size: 100%;
+    height: 200px;
     background-color: #391D18;
     color: #EEEEEE;
+    padding: 25px;
 }
 
-fa fa-envelope {
-    color: wihte;
+footer p {
+    margin: 10px;
 }
+
+.fa-envelope {
+    color: #999999;
+    font-size: 1.5em;
+}
+
+.fa-twitter {
+    color: #999999;
+    font-size: 1.5em;
+}
+
+.fa-facebook {
+    color: #999999;
+    font-size: 1.5em;
+}
+
+.attribution-text a{
+    color: #AAAAAA;
+    text-decoration: none;
+}
+
+.social-links-mobile {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .social-links-mobile{
+        display: inline;
+    }
+
+    .social-links {
+        display: none;
+    }
+}
+
+
