--- a/challenge2/css/style.css
+++ b/challenge2/css/style.css
@@ -22,7 +22,6 @@ h1, h2, h3 {
 
 h1{
     font-weight: 100;
-    font-size: 80px;
 }
 
 p{
@@ -33,7 +32,6 @@ p{
 
 .sub-heading {
     width: 50%;
-    font-size: 30px;
 }
 
 .get-yours-link {
@@ -120,10 +118,6 @@ p{
     }
 }
 
-
-
-
-
 .uses-section {
     padding: 15px 0px;
     background-color: #EBEBEB;
@@ -134,24 +128,27 @@ p{
     font-variant: small-caps;
 }
 
+.use-copy {
+    padding: 10px;
+}
+
 .use {
     height: 300px;
     background-color: white;
     text-align: left;
-    padding: 10px;
+    padding: 0px;
     border: 1px solid #DFDFDF;
     border-radius: 3px;
     margin-bottom: 10px;
 }
 
-.use{
-    margin: 0;
-}
-
 .use img{
-
+    width: 100%;
     height: 150px;
-
+    display: block;
+    object-fit: cover;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
 }
 
 @media (max-width: 992px) {
@@ -159,14 +156,7 @@ p{
         text-align: left;
         height: auto;
     }
-
-    
 }
-
-
-
-
-
 
 .testimonials-section {
     padding: 15px 0px;
@@ -194,7 +184,7 @@ p{
     }
 
 .testimonial span {
-       font-size: 80%;
+       font-size: .8em;
        color: #999999;
    }
 
@@ -204,7 +194,6 @@ p{
         height: auto;
     }
 }
-
 
 footer {
     height: 200px;
@@ -250,5 +239,3 @@ footer p {
         display: none;
     }
 }
-
-
