--- a/challenge5/style.css
+++ b/challenge5/style.css
@@ -88,3 +88,14 @@ img {
 .current-display {
     margin-left: 30px;
 }
+
+.preferences button {
+    padding: 0px;
+    height: 26px;
+    width: 26px;
+    line-height: 26px;
+    border-radius: 50%;
+    margin: 5px;
+    font-size: 14px;
+    background: #efefef;
+}
